dark mode fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,12 +3,12 @@
   font-family: Arial, sans-serif;
 }
 .switch {
-  position: relative;
+  position: absolute;
   display: inline-block;
   width: 60px;
   height: 34px;
-  right: -760px;
-  top: 10px;
+  right: 1%;
+  top: 8px;
 
   
   input {
